--- a/action.yml
+++ b/action.yml
@@ -159,7 +159,7 @@ runs:
         RESP_CODE=$(curl -w %{http_code} -s -o /dev/null \
         -X POST https://api.github.com/repos/$GITHUB_REPOSITORY/releases \
         -H "Accept: application/vnd.github+json" \
-        -H "Authorization: ${{ github.token }}" \
+        -H "Authorization: Bearer ${{ github.token }}" \
         -H "X-GitHub-Api-Version: 2022-11-28" \
         -d @- << EOF
         {
